--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="element" id="myElement" style="width: 200px; height: 100px; background-color: blue;"></div>
     
 </body>
 </html>
